added fifties section stack view; updated background image and color; added breaks for framework of PDR

--- a/SlantedDoor/Base.lproj/Main.storyboard
+++ b/SlantedDoor/Base.lproj/Main.storyboard
@@ -17,9 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kNx-6a-2rW" userLabel="BackgroundImage">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SD_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="kNx-6a-2rW" userLabel="BackgroundImage">
                                 <rect key="frame" x="0.0" y="24" width="1366" height="1000"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.14907446503639221" green="0.16053637862205505" blue="0.1803937554359436" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="gLm-T4-PLx" userLabel="TwentiesStackView">
                                 <rect key="frame" x="636" y="44" width="520" height="65"/>
@@ -181,6 +181,30 @@
                                     <constraint firstItem="1PT-zw-9OF" firstAttribute="height" secondItem="q1u-Tj-mAu" secondAttribute="height" id="W29-uY-XfR"/>
                                     <constraint firstItem="1PT-zw-9OF" firstAttribute="height" secondItem="BTB-sN-5TN" secondAttribute="height" id="dyk-xg-r9L"/>
                                     <constraint firstItem="1PT-zw-9OF" firstAttribute="height" secondItem="JjF-St-mNv" secondAttribute="height" id="gK0-xH-Daa"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="A4b-dC-5NK" userLabel="FiftiesStackView">
+                                <rect key="frame" x="20" y="530" width="78" height="392"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SwA-Qo-z7I" userLabel="51Button">
+                                        <rect key="frame" x="0.0" y="0.0" width="78" height="114.5"/>
+                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="51"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vcP-cj-kOz" userLabel="52Button">
+                                        <rect key="frame" x="0.0" y="138.5" width="78" height="115"/>
+                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="52"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="efT-Ny-TIz" userLabel="53Button">
+                                        <rect key="frame" x="0.0" y="277.5" width="78" height="114.5"/>
+                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
+                                        <state key="normal" title="53"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="efT-Ny-TIz" firstAttribute="height" secondItem="vcP-cj-kOz" secondAttribute="height" id="DS5-Tx-DU4"/>
+                                    <constraint firstItem="efT-Ny-TIz" firstAttribute="height" secondItem="SwA-Qo-z7I" secondAttribute="height" id="HA4-3I-mc4"/>
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7SH-Gz-s4l" userLabel="CafeStackView">
@@ -626,6 +650,19 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uwk-CQ-wOK" userLabel="7SectionBreak">
+                                <rect key="frame" x="608" y="939" width="20" height="65"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="NIy-zd-vsl"/>
+                                    <constraint firstAttribute="height" constant="65" id="NTO-e6-S1a"/>
+                                    <constraint firstAttribute="width" constant="20" id="aMi-Sy-YN0"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="vEd-kv-Dl8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P1x-6K-GQK" userLabel="3_4SectionBreak">
                                 <rect key="frame" x="106" y="44" width="20" height="65"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -642,6 +679,18 @@
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="65" id="MWE-BD-npm"/>
+                                    <constraint firstAttribute="height" constant="20" id="tNI-Bf-rkQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2g-ru-1jO" userLabel="PDRSectionBreak">
+                                <rect key="frame" x="20" y="930" width="580" height="2"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="hKF-N5-DnO"/>
+                                    <constraint firstAttribute="width" constant="580" id="qoy-zS-yd3"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -652,12 +701,14 @@
                         <constraints>
                             <constraint firstItem="tem-BF-ZuW" firstAttribute="centerX" secondItem="7SH-Gz-s4l" secondAttribute="centerX" id="08P-BG-LHY"/>
                             <constraint firstItem="5op-3D-8Tb" firstAttribute="top" secondItem="O9a-9c-03W" secondAttribute="bottom" constant="8" id="22a-Jf-cFW"/>
+                            <constraint firstItem="A4b-dC-5NK" firstAttribute="top" secondItem="5op-3D-8Tb" secondAttribute="bottom" constant="8" id="3i7-dv-Mlm"/>
                             <constraint firstItem="u6X-v9-hTE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="42X-UV-0gw"/>
                             <constraint firstItem="gLm-T4-PLx" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="4km-91-Vak"/>
                             <constraint firstAttribute="bottom" secondItem="kNx-6a-2rW" secondAttribute="bottom" id="4sS-1c-yr0"/>
                             <constraint firstItem="P1x-6K-GQK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="106" id="5RY-JT-UDn"/>
                             <constraint firstItem="kNx-6a-2rW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6Ir-mb-FOo"/>
                             <constraint firstItem="O9a-9c-03W" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6J6-zS-z0N"/>
+                            <constraint firstItem="c2g-ru-1jO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="9Bb-zB-6zJ"/>
                             <constraint firstItem="P1x-6K-GQK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="9rH-li-E18"/>
                             <constraint firstItem="7SH-Gz-s4l" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="165" id="Aq2-lm-IGS"/>
                             <constraint firstItem="5op-3D-8Tb" firstAttribute="leading" secondItem="O9a-9c-03W" secondAttribute="leading" id="BF1-Aa-nti"/>
@@ -671,20 +722,30 @@
                             <constraint firstItem="O9a-9c-03W" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Msx-rn-X24"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="RBj-HH-rZX" secondAttribute="bottom" constant="895" id="QuE-tx-b1u"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7SH-Gz-s4l" secondAttribute="trailing" constant="20" id="Sdq-0X-neL"/>
+                            <constraint firstItem="A4b-dC-5NK" firstAttribute="width" secondItem="O9a-9c-03W" secondAttribute="width" id="Shz-DR-9TJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="c2g-ru-1jO" secondAttribute="bottom" constant="72" id="Tfm-Vu-98i"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="5op-3D-8Tb" secondAttribute="bottom" constant="482" id="UKf-UR-WDF"/>
                             <constraint firstItem="RBj-HH-rZX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="VCu-7h-87R"/>
+                            <constraint firstItem="Uwk-CQ-wOK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="608" id="X0H-hj-QDd"/>
                             <constraint firstItem="kNx-6a-2rW" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Zkz-m4-HQw"/>
                             <constraint firstItem="gLm-T4-PLx" firstAttribute="leading" secondItem="RBj-HH-rZX" secondAttribute="trailing" constant="8" id="a8H-BG-Gan"/>
+                            <constraint firstItem="tem-BF-ZuW" firstAttribute="leading" secondItem="Uwk-CQ-wOK" secondAttribute="trailing" constant="480" id="bNV-qz-cDd"/>
+                            <constraint firstItem="Uwk-CQ-wOK" firstAttribute="top" secondItem="RBj-HH-rZX" secondAttribute="bottom" constant="830" id="bSS-ie-tfB"/>
                             <constraint firstItem="P1x-6K-GQK" firstAttribute="leading" secondItem="O9a-9c-03W" secondAttribute="trailing" constant="8" id="cCz-7B-cUY"/>
+                            <constraint firstItem="A4b-dC-5NK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="cQK-fg-0Bw"/>
                             <constraint firstItem="kNx-6a-2rW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eoT-Id-AQN"/>
                             <constraint firstItem="hOZ-Kg-7cN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="exw-7i-0YD"/>
                             <constraint firstItem="5op-3D-8Tb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="fRO-9L-f9k"/>
+                            <constraint firstItem="c2g-ru-1jO" firstAttribute="top" secondItem="5op-3D-8Tb" secondAttribute="bottom" constant="408" id="h8g-cr-y8y"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gLm-T4-PLx" secondAttribute="bottom" constant="895" id="hck-cP-VuE"/>
+                            <constraint firstItem="c2g-ru-1jO" firstAttribute="top" secondItem="A4b-dC-5NK" secondAttribute="bottom" constant="8" id="lbK-Ig-QqU"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="hOZ-Kg-7cN" secondAttribute="bottom" constant="895" id="pWd-vi-keQ"/>
                             <constraint firstItem="5op-3D-8Tb" firstAttribute="centerY" secondItem="kNx-6a-2rW" secondAttribute="centerY" constant="-12" id="sIU-4e-teV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="c2g-ru-1jO" secondAttribute="trailing" constant="746" id="tmv-El-pni"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="P1x-6K-GQK" secondAttribute="bottom" constant="895" id="v9E-fg-oSv"/>
                             <constraint firstItem="tem-BF-ZuW" firstAttribute="top" secondItem="7SH-Gz-s4l" secondAttribute="bottom" constant="50" id="vhr-dT-b7L"/>
                             <constraint firstItem="RBj-HH-rZX" firstAttribute="leading" secondItem="hOZ-Kg-7cN" secondAttribute="trailing" constant="8" id="wUY-JX-0ov"/>
+                            <constraint firstItem="Uwk-CQ-wOK" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="y1v-q6-I9F"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -696,5 +757,6 @@
     </scenes>
     <resources>
         <image name="FrontDoorIcon" width="256" height="256"/>
+        <image name="SD_Logo" width="180" height="116"/>
     </resources>
 </document>
